# Qrobot

./: .MusicAnalysis.cpp.swp  .MusicAnalysis.h.swp  .MusicRobot.cpp.swp  ActionController.h  AudioController.cpp  AudioController.cpp~  AudioController.h  CMakeLists.txt  Doxyfile~  MusicAnalysis  MusicAnalysis.cpp  MusicAnalysis.h  MusicAnalysis.h~  MusicRobot  MusicRobot.cpp  QRobotController.cpp  README.md  fft.cpp  out.txt  testGit.cpp  实训日记-2014-06-19.szy  实训日记-2014-06-20.孙正扬  实训日记-2014-06-23.szy  库  编译指令  编译指令~  音频转文字须知
Doc/html/: Audio2Text_8h.html  Audio2Text_8h_source.html  AudioController_8h.html  AudioController_8h_source.html  MusicAnalysis_8cpp.html  (+73 more)
include/: .MusicPlayer.h.swp  Audio2Text.h  Audio2Text.h~  AudioController.h  MusicAnalysis.h  MusicPlayer.h  MusicPlayer.h~  PeopleDetection.h  QRobotAction.h  QRobotController.h  QRobotController.h~  Text2Audio.h  Text2Audio.h~  WavPlayer.h  voiceTransform.h
src/: .MusicPlayer.cpp.swp  .MusicRobot.cpp.swp  Audio2Text.cpp  Audio2Text.cpp~  AudioController.cpp  AudioController.cpp~  CMakeLists.txt  Makefile  MusicAnalysis.cpp  MusicPlayer.cpp  MusicPlayer.cpp~  MusicRobot  MusicRobot.cpp  PeopleDetection.cpp  PeopleDetection.cpp~  QRobotAction.cpp  QRobotController.cpp  Text2Audio.cpp  Text2Audio.cpp~  cmake_install.cmake  out.txt  test  test.cpp  testA.cpp  testMain  testMain.cpp
src/main/: AudioController.cpp  Base64Codec.cpp  CMakeLists.txt  CMakeLists.txt~  Makefile  MusicAnalysis.cpp  MusicPlayer.cpp  MusicRobot.cpp  QRobotAction.cpp  QRobotController.cpp  QRobotController.cpp~  WavPlayer.cpp  base64.cpp
(+123 files in other folders)
